--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,39 @@
+@font-face {
+font-family: 'Minecraft Regular';
+font-style: normal;
+font-weight: normal;
+src: local('Minecraft Regular'), url('../fonts/1_MinecraftRegular1.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Minecraft Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Minecraft Italic'), url('../fonts/2_MinecraftItalic1.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Minecraft Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Minecraft Bold'), url('../fonts/3_MinecraftBold1.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Minecraft Bold Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Minecraft Bold Italic'), url('../fonts/4_MinecraftBoldItalic1.woff') format('woff');
+}
+
 html {
     background-color: black;
 }
 
-:root {font-size:16px;} 
+:root {font-size:18px;} 
 
 body {
     margin: 0;
@@ -18,17 +49,6 @@ body {
     padding:5vh 5vw;
     overflow:scroll;
     color: var(--color);
-}
-@media (max-width: 800px) {
-    #display{
-    width: 100vw; 
-    background: var(--background);
-    box-sizing: border-box;
-    height:100vh;
-    padding:5vh 5vw;
-    overflow:scroll;
-    color: var(--color);
-    }
 }
 
 a {
@@ -56,4 +76,27 @@ a {
 #darkmode:hover {
     transition-duration: 0.6s;
     top:-190px;
+}
+
+@media (max-width: 800px) {
+    #display{
+    width: 100vw; 
+    background: var(--background);
+    box-sizing: border-box;
+    height:100dvh;
+    padding:5vh 5vw;
+    overflow:scroll;
+    color: var(--color);
+    }
+    #darkmode {
+    transition-duration: 0.3s;
+    position: absolute;
+    top:-220px;
+    right: calc(1vw + 30px);
+    #darkmode:hover {
+    transition-duration: 0.6s;
+    top:-210px;
+}
+
+}
 }
