--- a/css/page.css
+++ b/css/page.css
@@ -1,3 +1,5 @@
 @import url("style.css");
 p {display:block; font-size: clamp(16px,1.05rem,20px); padding:1%;}
 p:hover {background-color: color-mix(in srgb, var(--color) 10%, transparent);}
+button {width:90%; margin:0% 5%;padding:2%; background-color: var(--background);border-color:var(--color);color:var(--color); transition-duration: 1s;}
+button:hover, button:active {width:90%; margin:0% 5%;padding:2%; background-color: color-mix(in srgb, var(--background) 95%, var(--color));border-color:var(--color);color:var(--color); width: 100%; margin: 0%; border-radius: 10px; transition-duration: 0.25s;}
